--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,7 @@
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+
 * {
   margin: 0;
   padding: 0;
@@ -22,8 +26,8 @@ body {
   height: 95vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba(126, 213, 111, 0.8),
-      rgba(40, 180, 133, 0.8)
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
     ),
     url('../img/hero.jpg');
   background-size: cover;
@@ -65,6 +69,7 @@ body {
   animation-name: moveInLeft;
   animation-duration: 1s;
   animation-timing-function: ease-out;
+
   /*
     animation-delay: 3s;
     animation-iteration-count: 3;
