--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,10 +3,14 @@
 @import 'abstracts/variables';
 
 @import 'base/animations';
+@import 'base/base';
 @import 'base/typography';
 @import 'base/utilities';
 
 @import 'components/button';
+@import 'components/composition';
 
 @import 'layout/grid';
 @import 'layout/header';
+
+@import 'pages/home';
