--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ body {
   position: relative;
   height: 52rem; }
   .card__side {
+    text-align: center;
     height: 52rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -412,7 +413,7 @@ body {
   opacity: 1; }
 
 .story {
-  width: 95%;
+  width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
   background-color: rgba(255, 255, 255, 0.6);
