--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,6 +6,7 @@
   height: 52rem;
 
   &__side {
+    text-align: center;
     height: 52rem;
     transition: all 0.8s ease;
     position: absolute;
