--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -29,6 +29,10 @@
     &::-webkit-input-placeholder {
       color: $color-grey-dark-2;
     }
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 
   &__label {
@@ -50,6 +54,11 @@
     width: 49%;
     display: inline-block;
     margin-bottom: 4rem;
+
+    @include respond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
