--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -54,6 +54,7 @@
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
       z-index: 20;
+      border-radius: inherit;
     }
   }
 
