--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,6 +14,7 @@
     z-index: 2000;
     box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
     text-align: center;
+    cursor: pointer;
 
     @include respond(tab-port) {
       top: 4rem;
@@ -21,8 +22,8 @@
     }
 
     @include respond(phone) {
-      top: 3.5rem;
-      right: 3.5rem;
+      top: 3rem;
+      right: 3rem;
     }
   }
 
